<resources>
    <string name="app_name">记账本</string>
    <string name="tally_book">记账本</string>
    <string name="skip">跳过</string>
    <string name="contentDescription">contentDescription</string>
    <string name="enter_main">开始体验</string>

    <string name="main_bottom_detail">明细</string>
    <string name="main_bottom_wallet">钱包</string>
    <string name="main_bottom_form">报表</string>
    <string name="main_bottom_more">更多</string>

    <string name="add_top_text_left">收入</string>
    <string name="add_top_text_right">支出</string>
    <string name="add_choose_account">选择账户</string>

    <string name="member_edit">编辑</string>
    <string name="member_title">成员</string>
    <string name="member_done">完成</string>
    <string name="member_me">我</string>
    <string name="member_father">爸爸</string>
    <string name="member_mother">妈妈</string>

    <string name="input_desc">输入备注</string>

    <string name="manage_member_member">成员</string>
    <string name="manage_member_manager">成员管理</string>
    <string name="manage_member_default_setting">默认设置</string>
    <string name="manage_member_new_member_hint">新建成员</string>
    <string name="manage_member_done">完成</string>
    <string name="manage_member_default">(默认)</string>
    <string name="manage_member_choose_default">选择默认成员</string>

    <string name="wallet_title">我的钱包</string>
    <string name="wallet_transfer">转账</string>
    <string name="wallet_balance">余额</string>

    <string name="money_zero">0.00</string>
    <string name="add_account">添加账户</string>
    <string name="books_default">默认账本</string>
    <string name="books_add_new">添加账本</string>
    <string name="detail_text_hint_1">Hi,Master</string>
    <string name="detail_text_hint_2">创建你的第一笔账吧</string>
</resources>
