<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.owl.tallybook.welcome.WelcomeFragment.Presenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_splash_ads"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/color_black"
            android:contentDescription="@string/contentDescription"
            android:onClick="@{() -> presenter.onAdClick()}"
            android:scaleType="fitXY"
            android:src="@drawable/welcome_default"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/color_orange">

            <ImageView
                android:id="@+id/id_splash_logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_5"
                android:contentDescription="@string/contentDescription"
                android:scaleType="fitXY"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/id_splash_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@+id/id_splash_logo"
                android:layout_toLeftOf="@+id/id_splash_skip"
                android:layout_toRightOf="@+id/id_splash_logo"
                android:layout_toStartOf="@+id/id_splash_skip"
                android:text="@string/tally_book"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/id_splash_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/id_splash_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/id_splash_name"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:onClick="@{() -> presenter.onSkipClick()}"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_10"
                android:text="@string/skip"/>

        </RelativeLayout>

    </LinearLayout>
</layout>
