<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.owl.book.main.detail.DetailFragment.Presenter"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/id_detail_books_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:paddingEnd="@dimen/dimen_6"
            android:paddingLeft="@dimen/dimen_6"
            android:paddingRight="@dimen/dimen_6"
            android:paddingStart="@dimen/dimen_6"
            android:visibility="gone"/>

        <View
            android:id="@+id/id_detail_v_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_below="@+id/id_detail_books_recyclerView"
            android:background="@android:color/darker_gray"/>

        <ImageView
            android:id="@+id/id_detail_iv_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/id_detail_v_line"
            android:layout_marginTop="@dimen/dimen_14"
            android:contentDescription="@null"
            android:padding="14dp"/>

        <RelativeLayout
            android:id="@+id/id_detail_cur_book"
            android:layout_width="115dp"
            android:layout_height="@dimen/dimen_50"
            android:layout_alignTop="@+id/id_detail_iv_search"
            android:layout_centerHorizontal="true"
            android:onClick="@{presenter.onCurBooksClicked}">

            <TextView
                android:id="@+id/id_detail_cur_book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_bg_detail_books"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_6"
                android:paddingEnd="@dimen/dimen_30"
                android:paddingLeft="@dimen/dimen_15"
                android:paddingRight="@dimen/dimen_30"
                android:paddingStart="@dimen/dimen_15"
                android:paddingTop="@dimen/dimen_6"
                android:text="@string/books_default"/>

            <ImageView
                android:id="@+id/id_detail_cur_book_img"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_alignEnd="@+id/id_detail_cur_book_text"
                android:layout_alignRight="@+id/id_detail_cur_book_text"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@null"
                android:padding="@dimen/dimen_9"
                android:src="@drawable/detail_books_arrow"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/id_detail_iv_date"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/id_detail_iv_search"
            android:background="@null"
            android:contentDescription="@null"
            android:padding="@dimen/dimen_15"
            android:scaleType="centerInside"
            android:src="@drawable/detail_date"/>

        <TextView
            android:id="@+id/id_detail_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/id_detail_iv_date"
            android:layout_alignEnd="@+id/id_detail_iv_date"
            android:layout_alignLeft="@+id/id_detail_iv_date"
            android:layout_alignRight="@+id/id_detail_iv_date"
            android:layout_alignStart="@+id/id_detail_iv_date"
            android:layout_alignTop="@+id/id_detail_iv_date"
            android:background="@null"
            android:gravity="center"
            android:paddingTop="@dimen/dimen_6"
            android:text=""/>

        <TextView
            android:id="@+id/id_detail_tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_detail_iv_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/detail_text_hint_1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/id_detail_tv_new_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_detail_tv_hi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/detail_text_hint_2"/>

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_below="@+id/id_detail_tv_new_first"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/detail_icon"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:contentDescription="@null"
            android:src="@drawable/detail_arrow"/>

    </RelativeLayout>
</layout>
